--- a/index.html
+++ b/index.html
@@ -11,40 +11,39 @@
   <body>
     <div class="container">
       <header class="header">
-        <div class="header__logo-container">
-          <h1 class="header__logo-container__title">LOVT</h1>
-          <h2 class="header__logo-container__subtitle">You Love, your loft!</h2>
+        <div class="header__logo">
+          <h1 class="logo__title">LOVT</h1>
+          <h2 class="logo__subtitle">You Love, your loft!</h2>
         </div>
 
         <div class="header__icon-menu"></div>
       </header>
       <main class="main">
-        <section class="main__section">
-          <div class="main__section-carousel">
+          <div class="main__carousel">
             <div
-              class="main__section-carousel__icon main__section-carousel__icon-left"
+              class="carousel__icon carousel__icon-left"
             ></div>
             <div
-              class="main__section-carousel__icon main__section-carousel__icon-right"
+              class="carousel__icon carousel__icon-right"
             ></div>
           </div>
-          <div class="container__main__section-iten">
-            <div class="main__section-iten">
+          <div class="main__iten-group">
+            <div class="main__iten">
               <div
-                class="main__section-iten__image main__section-iten__image-new"
+                class="main__image image--new"
               ></div>
-              <div class="main__section-iten__container__price-status">
-                <div class="main__section-iten__container__price-status__price">
+              <div class="main__price-status">
+                <div class="main__price">
                   $ 1,200
                 </div>
                 <div
-                  class="main__section-iten__container__price-status__status status__backgroud--color-green"
+                  class="main__status status--backgroud-green"
                 >
                   New
                 </div>
               </div>
 
-              <p class="main__section-iten__description">
+              <p class="main__description">
                 Mussum Ipsum, cacilds vidis litro abertis. Delegadis gente
                 finis, bibendum egestas augue arcu ut est. Suco de cevadiss, é
                 um leite divinis, qui tem lupuliz, matis, aguis e fermentis.
@@ -52,22 +51,22 @@
               </p>
             </div>
 
-            <div class="main__section-iten">
+            <div class="main__iten">
               <div
-                class="main__section-iten__image main__section-iten__image-sale"
+                class="main__image image--sale"
               ></div>
-              <div class="main__section-iten__container__price-status">
-                <div class="main__section-iten__container__price-status__price">
+              <div class="main__price-status">
+                <div class="main__price">
                   $ 2,000
                 </div>
                 <div
-                  class="main__section-iten__container__price-status__status status__backgroud--color-yellow"
+                  class="main__status status--backgroud-yellow"
                 >
                   Sale
                 </div>
               </div>
 
-              <p class="main__section-iten__description">
+              <p class="main__description">
                 Mussum Ipsum, cacilds vidis litro abertis. Delegadis gente
                 finis, bibendum egestas augue arcu ut est. Suco de cevadiss, é
                 um leite divinis, qui tem lupuliz, matis, aguis e fermentis.
@@ -75,41 +74,40 @@
               </p>
             </div>
           </div>
-        </section>
       </main>
       <section class="section__style">
-        <h2 class="section__style__title">Your Style</h2>
-        <div class="section__style__image section__style__image-industrial">
-          <p class="section__style__image-title">Industrial</p>
+        <h2 class="style__title">Your Style</h2>
+        <div class="style__image image--industrial">
+          <p class="style__image-title">Industrial</p>
         </div>
 
         <div
-          class="section__style__image section__style__image-modern modern-img--margin"
+          class="style__image image--modern modern--margin"
         >
-            <p class="section__style__image-title">Modern</p>
+            <p class="style__image-title">Modern</p>
         </div>
 
-        <div class="section__style__image section__style__image-classic">
-            <p class="section__style__image-title">Classic</p>
+        <div class="style__image image--classic">
+            <p class="style__image-title">Classic</p>
         </div>
       </section>
 
       <footer class="footer">
-        <div class="footer__image-map"></div>
-        <div class="footer__container">
-        <div class="footer__container-text">
+        <div class="footer__map"></div>
+        <div class="footer__text-social-group">
+        <div class="footer__text-group">
           <p>LOVT - You love, your loft!</p>
           <p>Broad St, Newark, NJ 07102 - USA</p>
-          <p>+1 (973) 854-555-548</p>
-          <p>contact@lovtrealstate.com</p>
+          <a class="text__link" href="tel:+1 (973) 854-555-548">+1 (973) 854-555-548</a>
+          <a class="text__link" href="mailto:contact@lovtrealstate.com"> contact@lovtrealstate.com</a>
         </div>
-        <div class="footer__container-social">
-          <p class="footer__container-social__title">OUR SOCIAL MEDIAS:</p>
+        <div class="footer__social">
+          <p class="social__title">OUR SOCIAL MEDIAS:</p>
 
-          <div class="footer__container-social__all-icons">
-            <div class="footer__container-social__icon  icon--instagram"></div>
-            <div class="footer__container-social__icon icon--facebook"></div>
-            <div class="footer__container-social__icon  icon--whatsapp"></div>
+          <div class="social__icons">
+            <div class="social__icon  icon--instagram"></div>
+            <div class="social__icon icon--facebook"></div>
+            <div class="social__icon  icon--whatsapp"></div>
           </div>
           
         </div>
